# easy-langent

./: .gitignore  README.md  test.py  大纲.md
docs/: chapter1.md  chapter2.md  chapter4.md  chapter5.md  chapter7.md  index.md  projects.md  前言.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css  index.ts
docs/guide/: chapter1.md  chapter2.md  chapter3.md  chapter4.md  chapter6.md  chapter7.md  chapter8.md  chapter9.md  前言.md  结语.md
docs/tmp/: chapter9.md
project/DataAgent/: README.md
project/DataAgent/backend/: openapi.json  pyproject.toml  save_openapi.py
project/DataAgent/backend/src/: agent.py  data_manager.py  server.py  state.py  tools.py
project/DataAgent/frontend/: index.html  package.json  pnpm-lock.yaml
project/DataAgent/frontend/src/: App.tsx  index.css
project/DebateGame/: README.md  debateAgent.py
project/MyProject/: who_is_undercover.py  构建—谁是卧底游戏智能体.md
project/NovelGenerateDemo/: NovelGenerateDemo.py  Readme
project/SpyDemo/: Readme.md  pyproject.toml  requirements.txt
project/SpyDemo/src/game/: __init__.py  graph.py  logic.py  main.py  model.py  state.py
project/SpyDemo/tests/: test_game_state.py  test_graph.py  test_nodes.py
project/WhoIsTheSpy/: Readme.md  WhoIsTheSpy.py  run_result.txt  who_is_undercover.py
project/WuPZWhoIsTheSpy/: Readme.md
project/debateGame/: README.md  debateAgent.py  requirements.txt
src/code/: chapter1.ipynb  chapter2.ipynb  chapter3.ipynb  learning_method_examples.json  llm诗词.txt
src/code/workspace/: example.txt  project_notes.md
tmp/: 大纲-暂定.md
(+11 files in other folders)
