[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "who-is-the-spy-graduation"
version = "0.1.0"
description = "基于 LangGraph 的谁是卧底多智能体毕业设计"
readme = "Readme.md"
requires-python = ">=3.11"
dependencies = [
  "langchain>=1.0.0",
  "langgraph>=1.0.0",
  "langchain-openai>=1.1.12",
  "python-dotenv>=1.2.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
